--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Pivit Labs",
-  "license": "All Rights Reserved",
+  "license": "MIT",
   "dependencies": {
     "async": "~0.9.0",
     "nodemailer": "~1.0.4",
