--- a/package.json
+++ b/package.json
@@ -10,6 +10,21 @@
   },
   "author": "Pivit Labs",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/sm-github/fc-mailer.git"
+  },
+  "contributors": [
+  	{
+  		"name": "Andrew Jensen",
+  		"email": ""
+  	},
+  	{
+  		"name": "Skyler Mitchell",
+  		"email": ""
+  	}
+  ],
+  "license": "All Rights Reserved",
   "dependencies": {
     "async": "~0.9.0",
     "nodemailer": "~1.0.4",
