--- a/package.json
+++ b/package.json
@@ -9,22 +9,21 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Pivit Labs",
-  "license": "MIT",
+  "license": "All Rights Reserved",
   "repository": {
     "type": "git",
     "url": "git://github.com/sm-github/fc-mailer.git"
   },
   "contributors": [
-  	{
-  		"name": "Andrew Jensen",
-  		"email": ""
-  	},
-  	{
-  		"name": "Skyler Mitchell",
-  		"email": ""
-  	}
+    {
+      "name": "Andrew Jensen",
+      "email": ""
+    },
+    {
+      "name": "Skyler Mitchell",
+      "email": ""
+    }
   ],
-  "license": "All Rights Reserved",
   "dependencies": {
     "async": "~0.9.0",
     "nodemailer": "~1.0.4",
@@ -32,5 +31,6 @@
     "swig-email-templates": "~1.3.0"
   },
   "devDependencies": {
+    "mocha": "^2.0.1"
   }
 }
