--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Pivit Labs",
-  "license": "All Rights Reserved",
+  "license": "MIT",
   "repository": {
     "type": "git",
     "url": "git://github.com/sm-github/fc-mailer.git"
