--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "async": "~0.9.0",
     "nodemailer": "~1.0.4",
     "swig": "~1.4.2",
-    "swig-email-templates": "~1.3.0"
+    "swig-emails": "^2.0.0"
   },
   "devDependencies": {
     "mocha": "^2.0.1"
