--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "async": "~0.9.0",
     "nodemailer": "~1.0.4",
     "swig": "~1.4.2",
-    "swig-emails": "^2.0.0"
+    "swig-emails": "^2.0.0",
+    "nodemailer-smtp-transport": "^0.1.13"
   },
   "devDependencies": {
     "mocha": "^2.0.1"
